<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_margin="05dp"
        android:background="@drawable/img_3">

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgN"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        >

        <RadioButton
            android:id="@+id/rbEasy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:checked="true"
            android:text="@string/easy"
            android:textColor="@color/blue"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/rbHard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard"
            android:textSize="20dp"
            android:textColor="@color/design_default_color_error"
            android:buttonTint="@color/black"/>
    </RadioGroup>

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/btnStart"
        android:textColor="@color/black"
        android:background="@color/purple_fl"/>

</LinearLayout>




