<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gris"
        android:layout_margin="10dp">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            android:background="@color/white">

            <ImageButton
                android:id="@+id/imageButtonReset"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/refresh_24"
                android:tint="#000000"
                tools:ignore="UseAppTint,SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/alarm_24"
                android:layout_margin="15dp"
                android:tint="#000000"
                tools:ignore="UseAppTint" />
            <TextView
                android:id="@+id/tvTimer"
                android:layout_margin="15dp"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/time"
                android:textSize="25dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvEssais"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:gravity="end"
                android:text="@string/tentative"
                android:textColor="@color/black"
                android:textSize="25dp" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">


            <TextView
                android:id="@+id/textViewS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/tvScore"
                android:textColor="@color/pink"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewScore"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:text="@string/Score"
                android:textColor="@color/pink"
                android:textSize="20dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="20dp"
            android:text="@string/tvText"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_margin="10dp">



            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:inputType="number"
                android:background="@color/white"
                android:hint="0"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/imageButtonCheck"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@color/white"
                android:tint="@color/purple_600"
                app:srcCompat="@drawable/check_24"
                tools:ignore="UseAppTint,SpeakableTextPresentCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Historique"
                android:textColor="@color/pink"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewMLHistorique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="left"
                android:maxLines="10"
                android:singleLine="false"
                android:text=""
                android:textColor="@color/black"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
