<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_fl"
    tools:context=".GameHardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/gris"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonResetH"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:tint="@color/black"
                app:srcCompat="@drawable/refresh_24"
                tools:ignore="UseAppTint,SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageViewH"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:tint="@color/black"
                app:srcCompat="@drawable/alarm_24"
                tools:ignore="UseAppTint" />

            <TextView
                android:id="@+id/tvTimerH"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/black"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/tvEssaisH"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="15dp"
                android:gravity="end"
                android:text="@string/tentative"
                android:textColor="@color/black"
                android:textSize="25dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textViewSH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/tvScore"
                android:textColor="@color/blue"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textViewScoreH"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="end"
                android:text="@string/Score"
                android:textColor="@color/blue"
                android:textSize="20dp" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvMessageH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/tvText"
            android:textColor="@color/black"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_fl"
            android:orientation="vertical">


            <EditText
                android:id="@+id/editTextNumberH"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="0"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="100dp" />

            <ImageButton
                android:id="@+id/imageButtonCheckH"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:tint="@color/white"
                app:srcCompat="@drawable/check_24"
                tools:ignore="UseAppTint,SpeakableTextPresentCheck" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>




